<?xml version="1.0"?>
<package format="3">
  <name>tb3_data_tools</name>
  <version>0.1.0</version>
  <description>Multi-topic recorder nodes and launch files for TurtleBot3 dataset capture.</description>
  <maintainer email="dev@example.com">SLAM Dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag2_py</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
